Final version of slides

--- a/How-To-Science/material/references.bib
+++ b/How-To-Science/material/references.bib
@@ -35,4 +35,69 @@
   url          = {https://undsci.berkeley.edu/understanding-science-101/how-science-works/},
 }
 
+@Misc{Simeonov2024,
+  author    = {Simeonov, Lachezar S.},
+  date      = {2024},
+  title     = {Derivation of Schrodinger's equation from the Hamilton-Jacobi and the Eikonal equations},
+  doi       = {10.48550/ARXIV.2410.03689},
+  copyright = {Creative Commons Attribution 4.0 International},
+  keywords  = {Quantum Physics (quant-ph), FOS: Physical sciences, FOS: Physical sciences},
+  publisher = {arXiv},
+}
+
+@Book{Broglie2021,
+  author       = {Louis de Broglie},
+  date         = {2021},
+  title        = {Research on the theory of Quanta},
+  editor       = {Vesselin Petkov},
+  isbn         = {978-1-927763-99-5},
+  language     = {english},
+  origlanguage = {french},
+}
+
+@Misc{NorbertMitzel2022,
+  author   = {NorbertMitzel},
+  date     = {2022-02-10},
+  title    = {GED C6H6 diff pattern},
+  language = {english},
+  subtitle = {cheme 2: Diffraction pattern of gaseous benzene},
+}
+
+@Article{Struyve2001,
+  author    = {Struyve, W. and De Baere, W.},
+  date      = {2001},
+  title     = {Comments on some recently proposed experiments that should distinguish Bohmian mechanics from quantum mechanics},
+  doi       = {10.48550/ARXIV.QUANT-PH/0108038},
+  copyright = {Assumed arXiv.org perpetual, non-exclusive license to distribute this article for submissions made before January 2004},
+  keywords  = {Quantum Physics (quant-ph), FOS: Physical sciences, FOS: Physical sciences},
+  publisher = {arXiv},
+}
+
+@Misc{Opasson2011,
+  author   = {Opasson},
+  date     = {2011-10-13},
+  title    = {Doppelspalt},
+  language = {english},
+  url      = {https://upload.wikimedia.org/wikipedia/commons/0/02/Doppelspalt.svg},
+}
+
+@InBook{Zhou2017,
+  author    = {Zhou, X and Thompson, G.E.},
+  booktitle = {Reference Module in Materials Science and Materials Engineering},
+  date      = {2017},
+  title     = {Electron and Photon Based Spatially Resolved Techniques},
+  doi       = {10.1016/b978-0-12-803581-8.10140-7},
+  isbn      = {9780128035818},
+  publisher = {Elsevier},
+}
+
+@Misc{Ldm19542003,
+  author = {Ldm1954},
+  date   = {2003-06-16},
+  title  = {Al-Cu-Fe-Cr decagonal quasicrystal diffraction pattern},
+  url    = {https://upload.wikimedia.org/wikipedia/commons/6/65/Al-Cu-Fe-Cr_decagonal_quasicrystal_diffraction_pattern.tif},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
+
+@Comment{jabref-meta: fileDirectoryLatex-oel-debian:/home/oel/Dokumente;}
