Add presentation on rqs and hypotheses.

--- a/Research-Guide/Material/references.bib
+++ b/Research-Guide/Material/references.bib
@@ -10,4 +10,30 @@
   publisher    = {Korean Academy of Medical Sciences},
 }
 
+@Article{Rigolin2023,
+  author       = {Rigolin, Gustavo},
+  date         = {2023-11},
+  journaltitle = {Journal of Physics G: Nuclear and Particle Physics},
+  title        = {Asymmetric particle-antiparticle Dirac equation: second quantization},
+  doi          = {10.1088/1361-6471/ad0313},
+  issn         = {1361-6471},
+  number       = {12},
+  pages        = {125005},
+  volume       = {50},
+  publisher    = {IOP Publishing},
+}
+
+@Article{Watson2020,
+  author       = {Watson, T. B. and Musielak, Z. E.},
+  date         = {2020-10},
+  journaltitle = {International Journal of Modern Physics A},
+  title        = {Chiral symmetry in Dirac equation and its effects on neutrino masses and dark matter},
+  doi          = {10.1142/s0217751x20501894},
+  issn         = {1793-656X},
+  number       = {30},
+  pages        = {2050189},
+  volume       = {35},
+  publisher    = {World Scientific Pub Co Pte Ltd},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
