--- a/Research-Guide/slides.tex
+++ b/Research-Guide/slides.tex
@@ -48,6 +48,26 @@
 	\tableofcontents
 \end{frame}
 
+\section{Research Questions and Hypotheses}%
+\label{sec:Research Questions and Hypotheses}
+
+\input{./Sections/rq-and-hypos.tex}
+
+\section{Crafting the RQ and Hypotheses}%
+\label{sec:Crafting the RQ and Hypotheses}
+
+\input{./Sections/construction.tex}
+
+\section{Examples}%
+\label{sec:Examples}
+
+\input{./Sections/examples.tex}
+
+\section{Conclusions}%
+\label{sec:Conclusions}
+
+\input{./Sections/conclusions.tex}
+
 \section{References}
 \begin{frame}[allowframebreaks]{References}
 	\printbibliography
